[package]
name = "verwalter_config"
description = """
    Verwalter's internal configuration library
"""
keywords = ["config", "verwalter"]
version = "0.7.5"
homepage = "http://github.com/tailhook/verwalter/tree/master/verwalter_config"
authors = ["Paul Colomiets <paul@colomiets.name>"]
workspace = ".."

[dependencies]
quire = "0.2.0"
log = "0.3.2"
rustc-serialize = "0.3.16"
yaml-rust = "0.3"
scan_dir = "0.3"
handlebars = "0.15"
quick-error = "1.1.0"

[lib]
path = "src/lib.rs"
