[package]
name = "verwalter_config"
description = """
    Verwalter's internal configuration library
"""
keywords = ["config", "verwalter"]
version = "0.8.8"
homepage = "http://github.com/tailhook/verwalter/tree/master/verwalter_config"
#readme = "README.rst"
#documentation = "http://verwalter.readthedocs.org"
authors = ["Paul Colomiets <paul@colomiets.name>"]

[dependencies]
quire = "0.2.2"
log = "0.3.2"
rustc-serialize = "0.3.16"
yaml-rust = "0.3"
scan_dir = "0.3"
quick-error = "1.1.0"

[lib]
path = "src/lib.rs"
