[package]
name = "verwalter_config"
description = """
    Verwalter's internal configuration library
"""
keywords = ["config", "verwalter"]
version = "0.9.1"
homepage = "http://github.com/tailhook/verwalter/tree/master/verwalter_config"
#readme = "README.rst"
#documentation = "http://verwalter.readthedocs.org"
authors = ["Paul Colomiets <paul@colomiets.name>"]

[dependencies]
quire = "0.3.1"
log = "0.3.2"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
yaml-rust = "0.4.0"
scan_dir = "0.3"
quick-error = "1.1.0"

[lib]
path = "src/lib.rs"
